# Colosseum

./: .gitignore  build.sh  patch_ue_libcxx.sh
AirLib/include/vehicles/multirotor/: MultiRotorParams.hpp
MavLinkCom/src/impl/linux/: MavLinkFindSerialPorts.cpp
PythonClient/airsim/: client.py  shared_memory_image_reader.py
Unreal/Environments/BlocksV2/: .ignore  BlocksV2.code-workspace  BlocksV2.uproject  Makefile
Unreal/Environments/BlocksV2/Config/: DefaultGame.ini
Unreal/Environments/BlocksV2/Content/DroneNavigation/Blueprints/: BP_GrayMarker.uasset  BP_RedMarker.uasset
Unreal/Environments/BlocksV2/Content/DroneNavigation/Materials/: M_GrayMarker.uasset  M_RedEmissive.uasset
Unreal/Environments/BlocksV2/Content/FlyingCPP/Maps/: FlyingExampleMapV2.umap
Unreal/Environments/BlocksV2/Content/__ExternalActors__/FlyingCPP/Maps/FlyingExampleMapV2/0/4M/: AJL7HNM7445MYUWUYXM7D9.uasset
Unreal/Environments/BlocksV2/Content/__ExternalActors__/FlyingCPP/Maps/FlyingExampleMapV2/0/8V/: MRJ9BAGD92DLBJXT7QEFN5.uasset
Unreal/Plugins/AirSim/Source/: AirBlueprintLib.cpp  AirBlueprintLib.h  AirSim.Build.cs  ImagePackingAsyncTask.h  PIPCamera.cpp  PawnSimApi.cpp  RenderRequest.cpp  RenderRequest.h  SharedMemoryImageTransport.cpp  SharedMemoryImageTransport.h  UnrealImageCapture.cpp  UnrealImageCapture.h  WorldSimApi.cpp
Unreal/Plugins/AirSim/Source/SimHUD/: SimHUD.cpp
cmake/cmake-modules/: CommonSetup.cmake
cmake/rpclib_wrapper/: CMakeLists.txt
(+65 files in other folders)
